Large code cleanup & warning fixes